# AirLabBcn.github.io

./: CNAME  README.md  about.html  contact.html  index.html  index.qmd  models.html  news.html  pyproject.toml  research.html  resources.html  robots.txt  search.json  sitemap.xml  team.html
.github/workflows/: deploy.yml
blog/: index.html
site/: _quarto.yml  contact.qmd  index.qmd  models.qmd  news.qmd  resources.qmd  software.qmd  styles.css  team.qmd
site/.quarto/idx/: index.qmd.json
site/.quarto/xref/: 0a10b42d  INDEX  e5073127
site/_site/: about.html  index.html  search.json
site/_site/site_libs/bootstrap/: bootstrap.min.css
site/blog/: index.qmd
